# pipfile

./: Pipfile  azure-pipelines.yml  pyproject.toml
tools/itsi-query/: requirements.txt
